--- a/src/main/resources/static/student.html
+++ b/src/main/resources/static/student.html
@@ -42,7 +42,7 @@
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link" href="#" link-page="student_grade"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
+							<a class="nav-link" href="#" link-page="student_score"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" link-page="student_schedule"><i class="fas fa-calendar-alt" style="font-size: 22px;"></i> &nbsp;課表查詢</a>
