--- a/src/main/resources/static/teacher.html
+++ b/src/main/resources/static/teacher.html
@@ -31,7 +31,7 @@
 							<a class="nav-link" href="#" link-page="teacher_course"><i class="fas fa-graduation-cap"></i> 課程編輯</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" link-page="teacher_grade"><i class="fas fa-calendar-alt"></i> 成績批改</a>
+							<a class="nav-link" href="#" link-page="teacher_score"><i class="fas fa-calendar-alt"></i> 成績批改</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
