--- a/src/main/resources/static/student/student_schedule.html
+++ b/src/main/resources/static/student/student_schedule.html
@@ -1,130 +1,154 @@
-<div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
-    課表查詢
-    <input type="text" class="form-control w-50" placeholder="請輸入關鍵字查詢">
-    <div class="ms-2">
-        <button class="btn btn-success">查詢</button>
-        <button class="btn btn-primary">重置</button>
-    </div>
+<style>
+    .schedule-table th, .schedule-table td {
+        text-align: center;
+        vertical-align: middle;
+    }
+</style>
+
+<div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded">
+    <select id="courseYear" name="courseYear" class="form-select" style="width: 150px;">
+        <option value="112" data-semester="1">112-1</option>
+        <option value="112" data-semester="2">112-2</option>
+        <option value="111" data-semester="1">111-1</option>
+        <option value="111" data-semester="2">111-2</option>
+        <option value="110" data-semester="1">110-1</option>
+        <option value="110" data-semester="2">110-2</option>
+    </select>
 </div>
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
-    <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
+    <h2 class="text-center mb-4">課表</h2>
+    <table class="table table-bordered schedule-table">
         <thead>
             <tr>
-                <th>學號</th>
-                <th>姓名</th>
-                <th>科系</th>
-                <th>性別</th>
-                <th>生日</th>
-                <th>Email</th>
-                <th>手機</th>
-                <th>年級</th>
-                <th>班級</th>
-                <th>操作</th>
+                <th></th>
+                <th>星期一</th>
+                <th>星期二</th>
+                <th>星期三</th>
+                <th>星期四</th>
+                <th>星期五</th>
             </tr>
         </thead>
-        <tbody id="studentBody">
+        <tbody id="scheduleBody">
+            <tr>
+                <th>08:00 - 08:50<br>第一節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>09:00 - 09:50<br>第二節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>10:00 - 10:50<br>第三節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>11:00 - 11:50<br>第四節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th colspan="6" class="text-center bg-light">中午休息</th>
+            </tr>
+            <tr>
+                <th>13:00 - 13:50<br>第五節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>14:00 - 14:50<br>第六節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>15:00 - 15:50<br>第七節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>16:00 - 16:50<br>第八節</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </div>
 
-<div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded">
-    <div class="pagination p-3">
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <!-- 更多分頁按鈕 -->
-    </div>
-</div>
-
-<div class="modal fade" id="studentModal" tabindex="-1" aria-labelledby="studentModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="studentModalLabel">學生訊息</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form id="studentForm" action="">
-                <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
-                <input type="hidden" name="classId" id="classId">
-                <input type="hidden" name="permissionId" id="permissionId" value="3">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="userId">學&#12288;&#12288;號:</label>
-                        <input type="text" id="userId" name="userId" class="form-control" placeholder="請輸入學號" required>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="courseId">姓&#12288;&#12288;名:</label>
-                        <input type="text" id="userName" name="userName" class="form-control" placeholder="請輸入姓名" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="depId">科&#12288;&#12288;系:</label>
-                        <select id="depId" name="depId" class="form-select">
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>性&#12288;&#12288;別:</label>
-                        <div>
-                            <input class="form-check-input" type="radio" name="sex" id="male" value="1" checked>
-                            <label class="form-check-label" for="male">男</label>
-                        </div>
-                        <div>
-                            <input class="form-check-input" type="radio" name="sex" id="female" value="2">
-                            <label class="form-check-label" for="female">女</label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">生&#12288;&#12288;日:</label>
-                        <input type="date" id="birthDate" name="birthDate" class="form-control" placeholder="請輸入生日" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">電子信箱:</label>
-                        <input type="email" id="email" name="email" class="form-control" placeholder="請輸入Email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">手&#12288;&#12288;機:</label>
-                        <input type="text" id="phone" name="phone" class="form-control" placeholder="請輸入手機" required>
-                    </div>
-                    <div class="form-group">
-                        <label>班&#12288;&#12288;級:</label>
-                        <select id="classGrade" name="classGrade" class="form-select">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>年
-                        <select id="className" name="className" class="form-select">
-                            <option value="甲">甲</option>
-                            <option value="乙">乙</option>
-                            <option value="丙">丙</option>
-                        </select>班
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">入學日期:</label>
-                        <input type="date" id="admissionDate" name="admissionDate" class="form-control" placeholder="請輸入入學日期" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">大頭貼:&#12288;</label>
-                        <input type="file" id="avatar" name="avatar" class="form-control" accept=".jpg, .png">
-                        <img id="avatarPreview" src="" alt="預覽圖片" style="max-width: 200px; max-height: 200px; margin-top: 10px; display: none;">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="submit" class="btn btn-primary">保存</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
 <script>
-    //searchUser('studentBody', 'studentModal', 3);
-    loadDepartment();
-    $('#studentForm').on('submit', (e) => {
-        e.preventDefault();
-        saveUser('studentForm', 'studentBody', 'studentModal');
+    $(document).ready(function() {
+        $('#courseYear').change();
+    });
+    $('#courseYear').on('change', async(e) => {
+        $('#scheduleBody').find('td').html('');
+        var param = {
+            'userId' : `${userId}`,
+            'courseYear' : $('#courseYear').val(),
+            'courseSemester' : $('#courseYear').find('option:selected').data('semester')
+        }
+
+        var queryString = new URLSearchParams(param).toString();
+
+        const response = await fetch(`http://localhost:8080/course/findSchedule?${queryString}`, {
+            headers : {
+                'Authorization': `Bearer ${token}`,
+            }
+        });
+
+        const {state, message, data} = await response.json();
+        data.forEach(obj => {
+            var column;
+            switch (obj.courseOfWeek) {
+                case 'Monday':
+                    column = 0;
+                    break;
+                case 'Tuesday':
+                    column = 1;
+                    break;
+                case 'Wednesday':
+                    column = 2;
+                    break;
+                case 'Thursday':
+                    column = 3;
+                    break;
+                case 'Friday':
+                    column = 4;
+                    break;
+            }
+
+            for (var i = obj.courseStart; i <= obj.courseEnd; i++) {
+                if (obj.courseStart < 5) {
+                    $('#scheduleBody').find('tr').eq(i-1).find('td').eq(column).html(obj.courseName);
+                } else {
+                    $('#scheduleBody').find('tr').eq(i).find('td').eq(column).html(obj.courseName);
+                }
+            }
+        });
     });
 </script>
