--- a/src/main/resources/static/teacher/teacher_course.html
+++ b/src/main/resources/static/teacher/teacher_course.html
@@ -43,6 +43,7 @@
             </div>
             <form id="courseForm" action="">
                 <input type="hidden" name="courseIndex" id="courseIndex">
+                <input type="hidden" name="classId" id="classId">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="depId">科&#12288;&#12288;系:</label>
