老師課程編輯的下拉選單改為由資料庫查詢動態產生

--- a/src/main/resources/static/student/student_score.html
+++ b/src/main/resources/static/student/student_score.html
@@ -21,7 +21,7 @@
 
 <script>
     $(document).ready(async function() {
-        await loadCourseYear();
+        await loadCourseYear('courseYear');
         $('#courseYear').change();
     });    
 </script>
