--- a/src/main/resources/static/student/student_schedule.html
+++ b/src/main/resources/static/student/student_schedule.html
@@ -97,7 +97,7 @@
 
 <script>
     $(document).ready(async function() {
-        await loadCourseYear();
+        await loadCourseYear('courseYear');
         $('#courseYear').change();
     });
 
