--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -171,7 +171,7 @@
             const res = await fetch(`http://localhost:8080/user/findClassInfo?${queryString}`, {
                 method : 'GET',
                 headers : {
-                    "Authorization": `Bearer ${token}`
+                    'Authorization': `Bearer ${token}`
                 }
             });
             
