--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -31,7 +31,10 @@
 							<a class="nav-link active" href="#" link-page="root_front_page"><i class="fas fa-home"></i> 系統首頁</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" link-page="root_course"><i class="fas fa-book"></i> 課程管理</a>
+							<a class="nav-link" href="#" link-page="root_course_manager"><i class="fas fa-book"></i> 課程管理</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="root_course_info"><i class="fas fa-book"></i> 開課資訊</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link d-flex justify-content-between align-items-center check"
