--- a/src/main/resources/static/student/course_select.html
+++ b/src/main/resources/static/student/course_select.html
@@ -102,11 +102,11 @@
                         </select>班
                     </div>
                     <div class="form-group">
-                        <label for="birthDate">入學日期:</label>
+                        <label for="admissionDate">入學日期:</label>
                         <input type="date" id="admissionDate" name="admissionDate" class="form-control" placeholder="請輸入入學日期" required>
                     </div>
                     <div class="form-group">
-                        <label for="birthDate">大頭貼:&#12288;</label>
+                        <label for="avatar">大頭貼:&#12288;</label>
                         <input type="file" id="avatar" name="avatar" class="form-control" accept=".jpg, .png">
                         <img id="avatarPreview" src="" alt="預覽圖片" style="max-width: 200px; max-height: 200px; margin-top: 10px; display: none;">
                     </div>
