--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -66,7 +66,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./js/common.js"></script>
     <script>
         $('#togglePasswordButton').click(function () {
             var passwordInput = $('#password');
@@ -87,7 +87,7 @@
             var username = $("#username").val();
             var password = $("#password").val();
             try {
-                var response = await fetch('http://localhost:8080/user/login', {
+                var response = await fetch(`${ip}/user/login`, {
                     method: "POST",
                     headers: {
                         'Content-Type': 'application/json'
