--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -168,7 +168,7 @@
                 className: className
             }).toString();
 
-            const res = await fetch(`http://localhost:8080/user/findClassInfo?${queryString}`, {
+            const res = await fetch(`${ip}/user/findClassInfo?${queryString}`, {
                 method : 'GET',
                 headers : {
                     'Authorization': `Bearer ${token}`
