--- a/src/main/resources/static/student/student_schedule.html
+++ b/src/main/resources/static/student/student_schedule.html
@@ -111,7 +111,7 @@
 
         var queryString = new URLSearchParams(param).toString();
 
-        const response = await fetch(`http://localhost:8080/course/findSchedule?${queryString}`, {
+        const response = await fetch(`${ip}/course/findSchedule?${queryString}`, {
             headers : {
                 'Authorization': `Bearer ${token}`,
             }
