--- a/src/main/resources/static/teacher/teacher_score.html
+++ b/src/main/resources/static/teacher/teacher_score.html
@@ -87,7 +87,7 @@
             $('input[name="score"]').each(function(index, element) {
                 jsonArr.push(JSON.parse($(element).attr('data-score')));
             });
-            const response = await fetch('http://localhost:8080/course/updateScore', {
+            const response = await fetch(`${ip}/course/updateScore`, {
                 method : 'PUT',
                 headers : {
                     'Content-Type' : 'application/json',
